# SourcetrailGolangIndexer

./: .gitignore  README.md
bindings_golang/: CMakeLists.txt  lib.go  sourcetraildb.i
